# CmakeGL

./: .clang-format  .gitignore  CMakeLists.txt  CustomShader.cpp  LearnGLConfig.h  LearnGLConfig.h.in  README.md
Exercise Answers/: DrawALine.cpp  TextureTransform.cpp  line.fs  line.vs
GLTEST/: CoordsSys.cpp  CustomShader.cpp  GLMTest.cpp  Light.cpp  allCoordsSys.fs  allCoordsSys.vs  lamp.fs  light.fs  light.vs  main.cpp  rotation.vs  shader.fs  shader.vs
glad_dependency/: CMakeLists.txt
include/: CustomShader.cpp  CustomShader.h  utils.cpp  utils.h
include/glad/: glad.h
